2008-08-15  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectParserService.cs,
	  MonoDevelop.Projects.Dom.Parser/ProjectDom.cs,
	  MonoDevelop.Projects.Dom/ResolveResult.cs,
	  MonoDevelop.Projects.Dom/ExpressionContext.cs: Removed some debug
	  messages.

2008-08-11  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/LocalVariable.cs: Changed  local variable
	  interface.

2008-08-08  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs,
	  MonoDevelop.Projects.Dom/DomRegion.cs,
	  MonoDevelop.Projects.Dom/DomUsing.cs,
	  MonoDevelop.Projects.Dom/DomLocation.cs,
	  MonoDevelop.Projects.Dom.Database/HyenaSqliteCommand.cs,
	  MonoDevelop.Projects.Dom.Database/DatabaseType.cs,
	  MonoDevelop.Projects.Dom.Database/CodeCompletionDatabase.cs: Fixed
	  some bugs/worked on dom.

2008-08-08  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/DatabaseProjectDom.cs,
	  MonoDevelop.Projects.Dom/DomType.cs,
	  MonoDevelop.Projects.Dom.Database/HyenaSqliteCommand.cs,
	  MonoDevelop.Projects.Dom.Database/CodeCompletionDatabase.cs: Fixed
	  some bugs in the database layer.

2008-08-07  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Output/NetAmbience.cs,
	  MonoDevelop.Projects.Dom/ResolveResult.cs,
	  MonoDevelop.Projects.Dom/IDomVisitor.cs,
	  MonoDevelop.Projects.Dom/LocalVariable.cs,
	  MonoDevelop.Projects.CodeGeneration/IRefactorer.cs,
	  MonoDevelop.Projects.CodeGeneration/BaseRefactorer.cs,
	  MonoDevelop.Projects.CodeGeneration/CodeRefactorer.cs: Worked on
	  dom

2008-08-07  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/AbstractMember.cs,
	  MonoDevelop.Projects.Dom.Database/DatabaseType.cs,
	  MonoDevelop.Projects.Dom.Database/CodeCompletionDatabase.cs: Worked
	  on database security & speedup.

2008-08-06  Eric Butler <eric@extremeboredom.net>

	* MonoDevelop.Projects/DotNetProject.cs: Add additional null check.
